[gd_scene load_steps=29 format=3 uid="uid://ckn25ex6kyo8t"]

[ext_resource type="Script" path="res://Scenes/Objects/player.gd" id="1_2kbtc"]
[ext_resource type="Texture2D" uid="uid://bppghcu6oluql" path="res://flappy-bird-assets/sprites/redbird-midflap.png" id="2_ilnas"]
[ext_resource type="Texture2D" uid="uid://bt5lyaq5cllrd" path="res://flappy-bird-assets/sprites/redbird-downflap.png" id="3_ck60r"]
[ext_resource type="Texture2D" uid="uid://dskyb3qc7eeiw" path="res://flappy-bird-assets/sprites/redbird-upflap.png" id="4_mewnl"]
[ext_resource type="Texture2D" uid="uid://bgio0p4geeugb" path="res://flappy-bird-assets/sprites/frame-1.png" id="5_1gj84"]
[ext_resource type="PackedScene" uid="uid://dpwoll4882fc4" path="res://Scenes/Components/damager.tscn" id="5_dvls0"]
[ext_resource type="Texture2D" uid="uid://dvkwuvxc51ib0" path="res://flappy-bird-assets/sprites/pier.png" id="5_gvc6x"]
[ext_resource type="Texture2D" uid="uid://mqbhmmcempi" path="res://flappy-bird-assets/sprites/frame-2.png" id="6_q0q7g"]
[ext_resource type="PackedScene" uid="uid://hrtjf2ufx7ql" path="res://Scenes/Components/collecter.tscn" id="6_sgp0k"]
[ext_resource type="Texture2D" uid="uid://c3cap6v5g3oub" path="res://flappy-bird-assets/sprites/frame-3.png" id="7_kx4jd"]
[ext_resource type="AudioStream" uid="uid://bpcqxqcnk6ig0" path="res://flappy-bird-assets/audio/wing.wav" id="7_tu1jw"]
[ext_resource type="Texture2D" uid="uid://xk028a8vps42" path="res://flappy-bird-assets/sprites/frame-4.png" id="8_2ry6b"]
[ext_resource type="PackedScene" uid="uid://duhy20mm7cebp" path="res://Scenes/Effects/explosion.tscn" id="8_f2gds"]
[ext_resource type="AudioStream" uid="uid://csd8r0mbcphqk" path="res://flappy-bird-assets/audio/hit.wav" id="9_61wkk"]
[ext_resource type="Texture2D" uid="uid://ch88e8382xym0" path="res://flappy-bird-assets/sprites/frame-5.png" id="9_e07vb"]
[ext_resource type="Texture2D" uid="uid://bpa3wv78w5rgg" path="res://flappy-bird-assets/sprites/frame-6.png" id="10_om2qf"]
[ext_resource type="PackedScene" uid="uid://dow6sr82geluc" path="res://Scenes/Effects/fire.tscn" id="10_w01bj"]
[ext_resource type="Texture2D" uid="uid://ceku1ny86a6jf" path="res://flappy-bird-assets/sprites/frame-7.png" id="11_jknfj"]
[ext_resource type="AudioStream" uid="uid://55sufo4ymhg" path="res://flappy-bird-assets/audio/die.wav" id="12_0lntd"]
[ext_resource type="Texture2D" uid="uid://b5lxucle8rtna" path="res://flappy-bird-assets/sprites/frame-8.png" id="12_qy64k"]

[sub_resource type="SpriteFrames" id="SpriteFrames_g3n61"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_q0q7g")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ck60r")
}, {
"duration": 1.0,
"texture": ExtResource("2_ilnas")
}, {
"duration": 1.0,
"texture": ExtResource("4_mewnl")
}],
"loop": false,
"name": &"flap",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1gj84")
}, {
"duration": 1.0,
"texture": ExtResource("6_q0q7g")
}, {
"duration": 1.0,
"texture": ExtResource("7_kx4jd")
}, {
"duration": 1.0,
"texture": ExtResource("8_2ry6b")
}, {
"duration": 1.0,
"texture": ExtResource("9_e07vb")
}, {
"duration": 1.0,
"texture": ExtResource("10_om2qf")
}, {
"duration": 1.0,
"texture": ExtResource("11_jknfj")
}, {
"duration": 1.0,
"texture": ExtResource("12_qy64k")
}],
"loop": true,
"name": &"flap_fat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_gvc6x")
}],
"loop": true,
"name": &"pier",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rgjqq"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_vclsr"]
radius = 33.0152

[sub_resource type="CircleShape2D" id="CircleShape2D_njh5x"]
radius = 38.0132

[sub_resource type="Animation" id="Animation_h85hr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitAudioStreamPlayer:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DieAudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uy2b7"]
resource_name = "player_dead"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fire")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_fire"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DieAudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_start_vibrate_dead_joystick"
}]
}

[sub_resource type="Animation" id="Animation_c5ofi"]
resource_name = "player_hit"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("explosion")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitAudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_start_vibrate_joystick"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_821qq"]
_data = {
"RESET": SubResource("Animation_h85hr"),
"player_dead": SubResource("Animation_uy2b7"),
"player_hit": SubResource("Animation_c5ofi")
}

[node name="Player" type="CharacterBody2D"]
position = Vector2(153, 61)
collision_mask = 30
script = ExtResource("1_2kbtc")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.13, 0.134)
sprite_frames = SubResource("SpriteFrames_g3n61")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rgjqq")

[node name="Damager" parent="." instance=ExtResource("5_dvls0")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damager"]
shape = SubResource("CircleShape2D_vclsr")
debug_color = Color(0.968803, 0.156907, 0.21306, 0.42)

[node name="Collecter" parent="." instance=ExtResource("6_sgp0k")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collecter"]
shape = SubResource("CircleShape2D_njh5x")

[node name="FlapAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tu1jw")

[node name="HitAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_61wkk")

[node name="explosion" parent="." instance=ExtResource("8_f2gds")]
amount = 100
lifetime = 2.0

[node name="fire" parent="." instance=ExtResource("10_w01bj")]
process_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_821qq")
}

[node name="DieAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_0lntd")

[connection signal="player_damaged" from="Damager" to="." method="_on_damager_player_damaged"]
[connection signal="player_collected" from="Collecter" to="." method="_on_collecter_player_collected"]
